--- a/package.json
+++ b/package.json
@@ -15,19 +15,21 @@
     "scripts": {
         "prepublish": "babel src --out-dir lib --ignore \"**/*.test.js\"",
         "build": "babel src --out-dir lib --ignore \"**/*.test.js\"",
-        "test": "jest"
+        "test": "jest",
+        "client": "http-server demo/client"
     },
     "homepage": "https://github.com/weijie0192/diff-sync-js#readme",
     "devDependencies": {
-        "@babel/cli": "^7.8.4",
-        "@babel/core": "^7.9.6",
-        "@babel/preset-env": "^7.9.6",
+        "@babel/cli": "^7.25.9",
+        "@babel/core": "^7.26.0",
+        "@babel/preset-env": "^7.26.0",
         "babel-plugin-syntax-class-properties": "^6.13.0",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-preset-es2015": "^6.24.1",
-        "faker": "5.5.3",
-        "fast-json-patch": "^3.1.0",
-        "jest": "^27.4.7"
+        "faker": "6.6.6",
+        "fast-json-patch": "^3.1.1",
+        "jest": "^29.7.0",
+        "http-server": "14.1.1"
     },
     "keywords": [
         "differential synchronization",
@@ -36,6 +38,7 @@
         "synchronization"
     ],
     "dependencies": {
-      
+        "check-updates": "^0.0.1",
+        "npm-check-updates": "^17.1.11"
     }
 }
