--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
         "babel-preset-es2015": "^6.24.1",
         "faker": "6.6.6",
         "fast-json-patch": "^3.1.1",
-        "jest": "^29.7.0",
-        "http-server": "14.1.1"
+        "http-server": "14.1.1",
+        "jest": "^29.7.0"
     },
     "keywords": [
         "differential synchronization",
@@ -39,6 +39,8 @@
     ],
     "dependencies": {
         "check-updates": "^0.0.1",
-        "npm-check-updates": "^17.1.11"
+        "npm-check-updates": "^17.1.11",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.1"
     }
 }
